--- a/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/Views/EmailFormat/AnswerEmailFormat.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/Views/EmailFormat/AnswerEmailFormat.html
@@ -14,17 +14,17 @@
             <p>
                 <strong> #QuestionTitle </strong>
             </p>
-            <br/>
-            <br/>
+            <br />
+            <br />
             <div>
-                
+
                 <!--<img style="border-radius: 50%; height: 65px; vertical-align: middle;" src="#ImageUrl"> &nbsp;#AnswerUserName,&nbsp;#AnswerUserOccupation-->
-                <img style="border-radius: 50%;height: 65px;float: left;" src="#ImageUrl"> 
+                <img style="border-radius: 50%;height: 65px;float: left;" src="#ImageUrl">
                 <div>
                     <div style="display: inline-block;margin-top: 11px;padding-left: 15px; width:85%;"> #AnswerUserName ,&nbsp;#AnswerUserOccupation</div>
                     <div style="padding-left: 78px;"> #date</div>
                 </div>
-                
+
             </div>
             <br />
             <br />
@@ -34,7 +34,10 @@
             <br />
             <br />
             <div>
-                <a style="display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: 400; line-height: 1.42857143; text-align: center; white-space: nowrap; vertical-align: middle; -ms-touch-action: manipulation; touch-action: manipulation; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; background-image: none; border: 1px solid transparent; border-radius: 4px; color: #fff; background-color: #59a4e4; border-color: #204d74; margin-left: 116px;" href="#AnswerLink">Read on AltaPerspectiva </a>
+                <a style="display: inline-block; padding: 6px 12px; margin-bottom: 0; font-size: 14px; font-weight: 400; line-height: 1.42857143; text-align: center; white-space: nowrap; vertical-align: middle; -ms-touch-action: manipulation; touch-action: manipulation; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; background-image: none; border: 1px solid transparent; border-radius: 4px; color: #fff; background-color: #59a4e4; border-color: #204d74; margin-left: 116px;" href="#AnswerLink">
+                    <!--Read on AltaPerspectiva-->
+                    Leer en Alta perspectiva
+                </a>
             </div>
         </div>
     </div>
