--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -51,7 +51,7 @@
             </div>
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveOtherExperience()" #otherExperienceForm="ngForm">
-                    <div class="form-group">
+                    <!--<div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">Category:</label>
                         <div class="col-sm-8">
                             <select class="form-control" [(ngModel)]="otherExperience.categoryId" [ngModelOptions]="{standalone: true}">
@@ -61,7 +61,7 @@
                                 </option>
                             </select>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="email">Description*:</label>
                         <div class="col-sm-8">
