--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -66,7 +66,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">Nombre empresa:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="CompanyName" placeholder="Enter CompanyName" [(ngModel)]="employment.companyName"  [ngModelOptions]="{standalone: true}">
+                            <input type="text" class="form-control" id="CompanyName" placeholder="¿Dónde laboras?" [(ngModel)]="employment.companyName"  [ngModelOptions]="{standalone: true}">
                         </div>
                     </div>
 
