--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/apSearch.component.html
@@ -21,11 +21,11 @@
                             <hr />
                         </li>
                         <li>
-                            <a><span class="glyphicon glyphicon-search topic-icon" aria-hidden="true"></span><span class="search-footer">Topics:</span>  {{categoryMatched}}</a>
+                            <a><span class="glyphicon glyphicon-search topic-icon" aria-hidden="true"></span><span class="search-footer">Etapa de tu negocio:</span>  {{categoryMatched}}</a>
                             <hr />
                         </li>
                         <li>
-                            <a><span class="glyphicon glyphicon-search topic-icon" aria-hidden="true"></span><span class="search-footer">Search:</span>  {{title?title+'?':''}}</a>
+                            <a><span class="glyphicon glyphicon-search topic-icon" aria-hidden="true"></span><span class="search-footer">Buscar:</span>  {{title?title+'?':''}}</a>
                         </li>
                     </ul>
                 </div>
