--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/Login.cshtml
@@ -7,40 +7,7 @@
 @{
     ViewData["Title"] = "Log in";
 }
-@*<style>
-        h2 {
-            text-align: center;
-            margin-bottom: 25px;
-        }
 
-        input {
-            max-width: 100%;
-        }
-
-        .form-horizontal {
-            position: relative;
-            padding: 10px;
-            background-color: #ededed;
-            margin-top: 40px;
-            height: 305px;
-        }
-
-        .left-border {
-            background-image: url('../../images/border.png');
-            width: 4px;
-            margin-top: 40px;
-            position: absolute;
-            right: 0;
-            margin-right: -15px;
-            height: 305px;
-        }
-
-        .btn {
-            min-width: 100px;
-            background-color:#f7a30c;
-            color:white;
-        }
-    </style>*@
 <style>
    
 
@@ -77,11 +44,8 @@
     }
 </style>
 <div class="row">
-    <div class="col-md-2">
-        @*<img class="left-border" src="~/images/border.png" />*@
-        .
-    </div>
-    <div class="col-md-4 loginForm">
+
+    <div class="col-md-4 col-md-offset-4 loginForm">
 
         <section>
 
