--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -32,6 +32,9 @@
     .header-info {
             margin-left: 70px;
     }
+    label{
+        font-weight:normal;
+    }
 </style>
 <form #answerVM="ngForm" class="form-horizontal " role="form">
     <div class="modal-header">
@@ -44,10 +47,10 @@
             <div class="img-container" *ngIf="isAnonymous">
                 <img class="user-image " src="../../../../profile/Anonymous.png" />
             </div>
-            <div *ngIf="!isAnonymous" class="header-info">{{_logObj.user?.name}}  {{_logObj.user?.occupassion}} </div>
+            <div *ngIf="!isAnonymous" class="header-info">{{_logObj.user?.name}}{{'-'+_logObj.user?.occupassion}} </div>
             <div *ngIf="isAnonymous" class="header-info">Anonymous</div>
             <div *ngIf="!isDraft" class="checkbox-container">
-                <input type="checkbox" #answerAnonymous [checked]=false (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar anónimo </label>
+                <input type="checkbox" #answerAnonymous [checked]=false (change)="onChange(answerAnonymous.checked)" /> <label>Preguntar anónimo, </label>
                 <a *ngIf="!isFullScreen" [routerLink]="['/question/questionfullscreen',question.id]">
                     <!--Go full screen-->Ver página completa
                 </a>
