--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -6,17 +6,19 @@
 
 @*<h2>@ViewData["Title"].</h2>*@
 
+<div class="col-md-6 col-md-offset-3">
+    <form class="form-horizontal" role="form">
+        <h1>@ViewData["Title"].</h1>
+        <hr />
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>
+                    @*Please check your email to reset your password.*@
+                    Revisa tu correo electrónico para reestablecer tu contraseña
+                </p>
+            </div>
 
-<form class="form-horizontal" role="form">
-    <h1>@ViewData["Title"].</h1>
-    <hr />
-    <div class="form-group">
-        <div class="col-md-10">
-            <p>
-                @*Please check your email to reset your password.*@
-                Revisa tu correo electrónico para reestablecer tu contraseña
-            </p>
         </div>
+    </form>
+</div>
 
-    </div>
-</form>
