--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Shared/_Layout.cshtml
@@ -7,19 +7,33 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
     @*<environment names="Development">
-       
-    </environment>
-    <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
-              asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
-              asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
-        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    </environment>*@
+               <style>
+            .form-horizontal {
+            border-radius: 10px;
+            /*height: 355px;*/
+        }
+            </environment>
+            <environment names="Staging,Production">
+                <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
+                      asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+                      asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
+                <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
+                      asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
+                      asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
+                <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+            </environment>*@
     <style>
+        .nav-shadow {
+            background-color: white;
+            box-shadow: 0px 3px 14px #888888;
+        }
+
+        .form-horizontal {
+            border-radius: 10px;
+        }
+
         .body-minHeight {
             min-height: 79vh;
         }
@@ -131,28 +145,14 @@
 </head>
 
 <body class="body-minHeight">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="http://altap.azurewebsites.net/"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
-                <a href="http://altap.azurewebsites.net/" class="navbar-brand">
-                    <font style="color: #000000;">
-                        Altaperspectiva
-                    </font>
-                </a>
-            </div>
-            <div class="navbar-collapse collapse">
-                @*<ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    </ul>*@
-            </div>
+    <div class="navbar navbar-fixed-top nav-shadow">
+        <div class="navbar-header">
+            <a href="http://altap.azurewebsites.net"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
+            <a href="http://altap.azurewebsites.net" class="navbar-brand">
+                <font style="color: #000000;">
+                    Altaperspectiva
+                </font>
+            </a>
         </div>
     </div>
     <div class="container body-content">
@@ -161,7 +161,7 @@
     </div>
     <div class="footer">
         <div class="footer-container">
-           
+
         </div>
     </div>
     <environment names="Development">
