--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/navbar.less
@@ -16,6 +16,9 @@
     background-color: white;
     box-shadow: 0px 3px 14px #888888;
 }
+.form-horizontal .form-group {
+    margin-left: 5px;
+}
 
 .backgroundset {
     min-height: 66px !important;
