--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
@@ -4,15 +4,16 @@
 }
 
 
+<div class="col-md-6 col-md-offset-3">
+    <form class="form-horizontal" role="form">
+        <h1>@ViewData["Title"].</h1>
+        <hr />
+        <div class="form-group">
+            <div class="col-md-10">
+                Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
+            </div>
 
-<form class="form-horizontal" role="form">
-    <h1>@ViewData["Title"].</h1>
-    <hr />
-    <div class="form-group">
-        <div class="col-md-10">
-            Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
         </div>
-
-    </div>
-</form>
+    </form>
+</div>
 
