--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPassword.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPassword.cshtml
@@ -14,7 +14,7 @@
 </style>
 <h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
+<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal col-md-6 col-md-offset-3" role="form">
     @*<h4>Reset your password.</h4>*@
     <h4>Reestablece tu contraseña</h4>
     <hr />
@@ -22,24 +22,24 @@
     <input asp-for="Code" type="hidden" />
     <div class="form-group">
         @*<label asp-for="Email" class="col-md-2 control-label"></label>*@
-        <label class="col-md-2 control-label">Correo electrónico</label>
-        <div class="col-md-10">
+        <label class="col-md-4 control-label">Correo electrónico</label>
+        <div class="col-md-8">
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         @*<label asp-for="Password" class="col-md-2 control-label"></label>*@
-        <label class="col-md-2 control-label">Nueva contraseña</label>
-        <div class="col-md-10">
+        <label class="col-md-4 control-label">Nueva contraseña</label>
+        <div class="col-md-8">
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         @*<label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>*@
-        <label class="col-md-2 control-label">Confirma tu contraseña</label>
-        <div class="col-md-10">
+        <label class="col-md-4 control-label">Confirma tu contraseña</label>
+        <div class="col-md-8">
             <input asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
