--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -47,7 +47,7 @@
             <div class="img-container" *ngIf="isAnonymous">
                 <img class="user-image " src="../../../../profile/Anonymous.png" />
             </div>
-            <div *ngIf="!isAnonymous" class="header-info">{{_logObj.user?.name}}{{_logObj.user?.occupassion?'-'+_logObj.user?.occupassion:''}} </div>
+            <div *ngIf="!isAnonymous" class="header-info">{{_logObj.user?.name}}{{_logObj.user?.occupassion?' '+_logObj.user?.occupassion:''}} </div>
             <div *ngIf="isAnonymous" class="header-info">Anonymous</div>
             <div *ngIf="!isDraft" class="checkbox-container">
                 <input type="checkbox" #answerAnonymous [checked]=false (change)="onChange(answerAnonymous.checked)" /> <label>Anónimo </label>
