--- a/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaPerspectiva/src/Altaperspectiva.OpenId/Views/Account/ResetPasswordConfirmation.cshtml
@@ -10,7 +10,7 @@
         <hr />
         <div class="form-group">
             <div class="col-md-10">
-                Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
+                Your password has been reset. Please <a href="http://altap.azurewebsites.net/">Click here to log in</a>.
             </div>
 
         </div>
